[ ] Support multipart upload (for speed)
[p] Support permanent redirect error code
[ ] Support copying from s3 -> s3

[ ] Support range get

[x] Funtorize over the concurrency monad (Async / Lwt)
[x] Allow using core >= v0.9.0
[x] Only compile against async >= v0.10.0
[x] Dont compile with -safe-string
[x] return md5 of uploaded file

1.1.0:
[x] Switch to use ppx_deriving_protocol, and compile with -safe-string

1.0.0:
[x] Switch to use jbuilder and require core >= 0.9.

0.9.0:
[x] initial release