@@ -1,4 +1,3 @@
 _build
 .merlin
-aws-s3.install
-aws-s3.[0-9].*
+aws-s3*.install
