@@ -6,19 +6,11 @@ homepage: "https://github.com/andersfugmann/aws-s3"
 dev-repo: "git+https://github.com/andersfugmann/aws-s3"
 bug-reports: "https://github.com/andersfugmann/aws-s3/issues"
 build: [["jbuilder" "build" "-p" name "-j" jobs]]
-build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
 version: "2.0.0"
 depends: [
   "jbuilder" { build }
-  "core" {>= "v0.9.0"}
-  "ounit"
-  "cohttp"
-  "ocaml-inifiles"
-  "cryptokit"
-  "nocrypto"
-  "xml-light"
-  "yojson"
-  "ppx_protocol_conv"
+  "aws-s3"
+  "async" { >= "v0.10.0" }
 ]
 
 available: [ ocaml-version >= "4.04.0" ]
