@@ -2,9 +2,8 @@
 
 (library
  ((name aws_s3_async)
-  (public_name aws-s3.async)
-  (synopsis  "Async version of aws-s3")
+  (public_name aws-s3-async)
+  (synopsis  "Async backed for aws-s3")
   (libraries (aws_s3 async cohttp-async))
-  (optional)
  )
 )
