@@ -1,0 +1,9 @@
+(jbuild_version 1)
+
+(library
+ ((name aws_s3_lwt)
+  (public_name aws-s3-lwt)
+  (synopsis  "Lwt backed for aws-s3")
+  (libraries (aws_s3 lwt cohttp-lwt-unix))
+ )
+)
