@@ -1,5 +1,12 @@
-Client Library for simple S3 access.
+Ocaml library for accessing Amazon S3
 
-The library implements methods to cp (get and put), rm (single and
-multi) and ls. Also included is IAM bindings to get machine role and
-security tokens.
+This library provides access to Amazon Simple Storage Solution (S3).
+The library supports:
+* Fetching credentials (though IAM)
+* Copying file from and to s3
+* List files in S3 (from root)
+* Delete single object in S3
+
+The library supports both lwt and async concurrency models.
+* For lwt, please install `aws-s3-lwt` package
+* For Async, please install `aws-s3-async` package
