@@ -1,10 +1,0 @@
-(jbuild_version 1)
-
-(library
- ((name        aws_s3)
-  (public_name aws-s3.lib)
-  (synopsis "Aws s3 client library")
-  (libraries (core oUnit cohttp inifiles cryptokit nocrypto yojson ppx_protocol_conv ppx_protocol_conv.runtime ppx_protocol_conv.json ppx_protocol_conv.xml xml-light str))
-  (preprocess (pps (ppx_protocol_conv ppx_driver.runner)))
- )
-)
