@@ -4,6 +4,7 @@
 
 [ ] Support range get
 
+[x] Build multiple packages (aws-s3-lwt / aws-s3-async / aws-s3)
 [x] Funtorize over the concurrency monad (Async / Lwt)
 [x] Allow using core >= v0.9.0
 [x] Only compile against async >= v0.10.0
